--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,17 @@
     ],
     "require": {
         "doctrine/collections": "~1.0",
-        "swiftmailer/swiftmailer": "~5.0",
-        "symfony/config": "~2.4",
-        "symfony/dependency-injection": "~2.4",
-        "symfony/framework-bundle": "~2.4",
-        "symfony/http-kernel": "~2.4",
-        "symfony/security-bundle": "~2.0",
-        "symfony/twig-bundle": "~2.4"
+        "swiftmailer/swiftmailer": "~6.0",
+        "symfony/config": "~3.0 | ~4.0",
+        "symfony/dependency-injection": "~3.0 | ~4.0",
+        "symfony/framework-bundle": "~3.0 | ~4.0",
+        "symfony/http-kernel": "~3.0 | ~4.0",
+        "symfony/security-bundle": "~3.0 | ~4.0",
+        "symfony/twig-bundle": "~3.0 | ~4.0"
     },
     "require-dev": {
-        "knplabs/phpspec-welldone-extension": "~1.0",
-        "phpspec/phpspec": "^2.3"
+        "pedrotroller/php-cs-custom-fixer": "^2.2",
+        "phpspec/phpspec": "^4.2"
     },
     "autoload": {
         "psr-0": {
@@ -27,11 +27,11 @@
         }
     },
     "config": {
-        "bin-dir": "bin"
+        "sort-packages": "true"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "2.0.x-dev"
         }
     }
 }
